added navbar and some validation

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,20 @@
   </head>
 
   <body>
+  <ul>
+  <li>
+  <a href="/movies">Movies</a>
+  </li>
+  <li>
+  <a href="/dirctors">Dirctors</a>
+  </li>
+  <li>
+  <a href="/actors">Actors</a>
+  </li>
+  <li>
+  <a href="/characters">Characters</a>
+  </li>
+  </ul>
     <%= yield %>
   </body>
 </html>
